# perftests

./: .gitignore  README.md
arrays/: Arrays.java  arrays.go  arrays.js  arrays.py
back_up/arrays/: Arrays.java  arrays  arrays.cs
back_up/factorize/: factorize.js
back_up/filter/: FilterNames.cs  filter-names.py
back_up/mongotest/gomongo/: main.go
back_up/mongotest/javamongo/: pom.xml
back_up/mongotest/nodemongo/: package.json  song-model.js
back_up/phonebook/golang/: server.go
factorize/: Factorize.java  factorize.go
filter/: FilterNames.java  filter-names  filter-names.go  filter-names.js
filter-large-data/gofilter/: go.mod  main.go
filter-large-data/rustfilter/: Cargo.toml
mongotest/gomongo/: Gopkg.toml  song-dao.go  song-model.go
mongotest/nodemongo/: index.js  package-lock.json
pgread/denopg/: main.ts
pgread/gopg/: go.mod  main.go
pgread/rustpg/: .env  Cargo.toml
pgread/rustpg_tokiopg/: Cargo.toml
phonebook/golang/: server.go
phonebook/nodejs/: app.js  package.json
todopad/: README.md
todopad/go-todopad/: Dockerfile  go.mod  main.go  todos.db
todopad/js-todopad/: bun.lockb  package-lock.json  package.json  todopad.db
todopad/py-async-todopad/: Dockerfile  app.py  requirements.txt  todos.db
todopad/py-todopad/: Dockerfile  app.py
todopad/ru-todopad/: Cargo.toml  Dockerfile  todos.db
todopad/ru-todopad/migrations/: 20250219145253_create_todos.sql
todopad/ru-todopad/scripts/: build.sh  start.sh  stop.sh
todopad/ru-todopad/src/: main.rs
todopad/ru-todopad/templates/: about.html  base.html  index.html
(+40 files in other folders)
