[package]
name = "ru-todopad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
askama = "0.12.1"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
